# backend/docs/swagger.json
@@ -15,20 +15,32 @@
                 "summary": "OKR Generator",
                 "parameters": [
                     {
-                        "description": "entity.OKRGeneratorRequest",
+                        "description": "OKRGeneratorRequest",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.OKRGeneratorRequest"
+                            "$ref": "#/definitions/okr.OKRGeneratorRequest"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "entity.OKRGeneratorResponse200",
+                        "description": "OKRGeneratorResponse200",
                         "schema": {
-                            "$ref": "#/definitions/entity.OKRGeneratorResponse200"
+                            "$ref": "#/definitions/okr.OKRGeneratorResponse200"
+                        }
+                    },
+                    "400": {
+                        "description": "OKRGeneratorResponseError",
+                        "schema": {
+                            "$ref": "#/definitions/okr.OKRGeneratorResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "OKRGeneratorResponseError",
+                        "schema": {
+                            "$ref": "#/definitions/okr.OKRGeneratorResponseError"
                         }
                     }
                 }
@@ -36,7 +48,7 @@
         }
     },
     "definitions": {
-        "entity.KeyResult": {
+        "okr.KeyResult": {
             "type": "object",
             "properties": {
                 "key_result": {
@@ -44,7 +56,7 @@
                 }
             }
         },
-        "entity.OKRGeneratorRequest": {
+        "okr.OKRGeneratorRequest": {
             "type": "object",
             "required": [
                 "objective",
@@ -59,18 +71,27 @@
                 }
             }
         },
-        "entity.OKRGeneratorResponse200": {
+        "okr.OKRGeneratorResponse200": {
             "type": "object",
             "properties": {
                 "key_results": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.KeyResult"
+                        "$ref": "#/definitions/okr.KeyResult"
                     }
                 },
                 "objective": {
                     "type": "string"
                 },
+                "status_code": {
+                    "type": "integer"
+                }
+            }
+        },
+        "okr.OKRGeneratorResponseError": {
+            "type": "object",
+            "properties": {
+                "messages": {},
                 "status_code": {
                     "type": "integer"
                 }
